# smaster4s-timer

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STYLE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-test-code-all-platfroms.yml  deploy-content-pages.yml  test-for-ubuntu.yml
res/: default_layout.h
src/: app.c  app.h  cli.c  cli.h  common.c  common.h  file_flags.h  gui.c  gui.h  main.c
